# bmoji

./: .gitignore  BuildFlatpak.sh  Cargo.toml  LICENSE  LICENSE.md  README.md  astro.config.mjs  io.github.sheosi.bmoji.yml  justfile  package.json
.github/workflows/: deploy.yml
flatpak/: com.sheosi.bmoji.appdata.xml  com.sheosi.bmoji.yml  io.github.sheosi.bmoji.appdata.xml  io.github.sheosi.bmoji.desktop  io.github.sheosi.bmoji.yml
src/: main.rs  search.rs  theme.rs
src/components/: Features.astro  Footer.astro  Header.astro  Hero.astro  Installation.astro  Screenshot.astro  Stats.astro  Usage.astro
src/layouts/: Layout.astro
src/pages/: index.astro
src/styles/: global.css
