[package]
name = "bmoji"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "An emoji picker that's fast, simple and to the point.Made with Rust and Iced."
homepage = "https://sheosi.github.io/bmoji"
repository = "https://github.com/sheosi/bmoji"
readme = "README.md"

[dependencies]
# "root" is not a valid a language so it makes the parser go boom! at runtime, has to be removed
emoji = { version = "0.2.1", features = [
    "af",
    "am",
    "ar",
    "ar_SA",
    "as",
    "ast",
    "az",
    "be",
    "bg",
    "bn",
    "br",
    "bs",
    "ca",
    "ccp",
    "ceb",
    "chr",
    "ckb",
    "cs",
    "cy",
    "da",
    "de",
    "de_CH",
    "doi",
    "el",
    "en_AU",
    "en_CA",
    "en_GB",
    "en_IN",
    "es",
    "es_MX",
    "es_US",
    "et",
    "eu",
    "fa",
    "fi",
    "fil",
    "fo",
    "fr",
    "fr_CA",
    "ga",
    "gd",
    "gl",
    "gu",
    "ha",
    "ha_NE",
    "he",
    "hi",
    "hr",
    "hu",
    "hy",
    "ia",
    "id",
    "ig",
    "is",
    "it",
    "ja",
    "jv",
    "ka",
    "kab",
    "kk",
    "kl",
    "km",
    "kn",
    "ko",
    "kok",
    "ku",
    "ky",
    "lb",
    "lo",
    "lt",
    "lv",
    "mai",
    "mi",
    "mk",
    "ml",
    "mn",
    "mni",
    "mr",
    "ms",
    "mt",
    "my",
    "nb",
    "ne",
    "nl",
    "nn",
    "or",
    "pa",
    "pa_Arab",
    "pcm",
    "pl",
    "ps",
    "pt",
    "pt_PT",
    "qu",
    "rm",
    "ro",
    "ru",
    "rw",
    "sa",
    "sat",
    "sd",
    "si",
    "sk",
    "sl",
    "so",
    "sq",
    "sr",
    "sr_Cyrl",
    "sr_Cyrl_BA",
    "sr_Latn",
    "sr_Latn_BA",
    "su",
    "sv",
    "sw",
    "sw_KE",
    "ta",
    "te",
    "tg",
    "th",
    "ti",
    "tk",
    "to",
    "tr",
    "tt",
    "ug",
    "uk",
    "ur",
    "uz",
    "vi",
    "wo",
    "xh",
    "yo",
    "yo_BJ",
    "yue",
    "yue_Hans",
    "zh",
    "zh_Hant",
    "zh_Hant_HK",
    "zu",
] }
iced = { version = "0.14.0", features = ["debug", "image", "lazy", "advanced"] }
iced_aw = { version = "0.13.0", default-features = false, features = ["card"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
image = "0.25.6"
dconf_rs = "0.3.0" # To extract which theme is active
fluent-langneg = "0.14.1" # Language negotation
unic-langid = "0.9.1" # Language identifiers
tantivy = "0.25.0" # Search engine for the emojis
